[tool.poetry]
name = "tumblr-aggregate"
version = "0.1.0"
description = ""
authors = ["warabanshi <warabanshi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
python-daemon = "^2.2.4"
pytumblr = "^0.1.0"
wget = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
